# finova

./: Finova Network—Complete Smart Contracts Suite Project Structure v01 (26.07.2025).docx  Finova Network—Complete Smart Contracts Suite Project Structure v01 (26.07.md  Finova Network—Whitepaper (ENG) v03 (25.07.2025).docx  Finova Network—Whitepaper (ENG) v03 (25.07.2025).md  Finova_Reference  Smart Contracts Suite Project Structure.md
Finova Smart Contract Suite/ai-services/bot-detection/src/: main.py
Finova Smart Contract Suite/ai-services/content-analyzer/: Dockerfile
Finova Smart Contract Suite/api/: README.md  package.json  tsconfig.json
Finova Smart Contract Suite/api/src/: app.ts  index.ts
Finova Smart Contract Suite/api/src/config/: database.ts  index.ts
Finova Smart Contract Suite/api/src/controllers/: auth.controller.ts  mining.controller.ts  nft.controller.ts  referral.controller.ts  social.controller.ts  user.controller.ts
Finova Smart Contract Suite/api/src/middleware/: auth.middleware.ts  rate-limit.middleware.ts  validation.middleware.ts
Finova Smart Contract Suite/api/src/models/: Guild.model.ts  NFT.model.ts  Referral.model.ts  Transaction.model.ts  XP.model.ts
Finova Smart Contract Suite/api/src/routes/: admin.routes.ts  (+4 more)
Finova Smart Contract Suite/client/python/: README.md  setup.py
Finova Smart Contract Suite/client/rust/: Cargo.toml  README.md
Finova Smart Contract Suite/client/rust/src/: accounts.rs  lib.rs  types.rs  utils.rs
Finova Smart Contract Suite/client/typescript/: README.md  package.json
Finova Smart Contract Suite/finova-contracts/: AUTHORS.md  CHANGELOG.md  LICENSE  Makefile  SECURITY.md  docker-compose.dev.yml  docker-compose.prod.yml  package.json  rust-toolchain.toml
Finova Smart Contract Suite/mobile-sdk/react-native/: package.json
Finova Smart Contract Suite/programs/finova-core/: README.md
Finova Smart Contract Suite/programs/finova-nft/: Cargo.toml
Finova Smart Contract Suite/programs/finova-nft/src/: constants.rs
Finova Smart Contract Suite/programs/finova-nft/src/events/: mod.rs  use_card.rs
Finova Smart Contract Suite/programs/finova-nft/src/instructions/: create_collection.rs  marketplace.rs  mint_nft.rs  mod.rs  transfer_nft.rs  update_metadata.rs
Finova Smart Contract Suite/programs/finova-nft/src/state/: collection.rs  marketplace.rs  nft_metadata.rs
Finova Smart Contract Suite/programs/finova-oracle/: Cargo.toml
Finova Smart Contract Suite/programs/finova-oracle/src/: constants.rs  errors.rs  lib.rs  utils.rs
Finova Smart Contract Suite/programs/finova-oracle/src/instructions/: aggregate_feeds.rs
Finova Smart Contract Suite/programs/finova-oracle/src/math/: mod.rs
Finova Smart Contract Suite/programs/finova-oracle/src/state/: mod.rs  oracle_config.rs
Finova Smart Contract Suite/programs/finova-token/: README.md
Finova_Reference/ai-services/bot-detection/: Dockerfile  requirements.txt
Finova_Reference/ai-services/content-analyzer/: README.md  requirements.txt
Finova_Reference/api/: nodemon.json
Finova_Reference/client/python/: requirements.txt
Finova_Reference/client/typescript/: tsconfig.json
Finova_Reference/finova-contracts/: ACKNOWLEDGMENTS.md  Anchor.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Finova_Network_Whitepaper.md  Finova_Project_Structure.md  README.md  ROADMAP.md  docker-compose.test.yml  docker-compose.yml  jest.config.js  justfile  renovate.json  tsconfig.json
Finova_Reference/mobile-sdk/react-native/: README.md
Finova_Reference/programs/finova-bridge/: Cargo.toml
Finova_Reference/programs/finova-bridge/src/: constants.rs
Finova_Reference/programs/finova-bridge/src/cryptography/: mod.rs  signature_verification.rs
Finova_Reference/programs/finova-bridge/src/instructions/: lock_tokens.rs  mod.rs  unlock_tokens.rs
Finova_Reference/programs/finova-bridge/src/state/: locked_tokens.rs  validator_set.rs
Finova_Reference/programs/finova-core/: Cargo.toml
Finova_Reference/programs/finova-core/src/: constants.rs  lib.rs
Finova_Reference/programs/finova-core/src/events/: governance.rs  mod.rs  xp.rs
Finova_Reference/programs/finova-core/src/instructions/: anti_bot.rs  governance.rs  mod.rs  quality.rs  referral.rs  rewards.rs  xp.rs
Finova_Reference/programs/finova-core/src/state/: mining.rs  mod.rs  network.rs  referral.rs  rewards.rs  staking.rs  xp.rs
Finova_Reference/programs/finova-defi/: Cargo.toml  README.md
Finova_Reference/programs/finova-defi/src/: constants.rs  errors.rs
Finova_Reference/programs/finova-defi/src/instructions/: add_liquidity.rs  mod.rs  remove_liquidity.rs
Finova_Reference/programs/finova-defi/src/math/: curve.rs  mod.rs
Finova_Reference/programs/finova-defi/src/state/: farm.rs  pool.rs
Finova_Reference/programs/finova-nft/: README.md
Finova_Reference/programs/finova-oracle/: README.md
Finova_Reference/programs/finova-token/: Cargo.toml
Finova_Reference/programs/finova-token/src/: constants.rs  errors.rs  lib.rs
Finova_Reference/programs/finova-token/src/events/: stake.rs
Finova_Reference/programs/finova-token/src/instructions/: burn_tokens.rs  initialize_mint.rs  mint_tokens.rs
Finova_Reference/programs/finova-token/src/state/: mod.rs  reward_pool.rs
finova-contracts/: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
finova-contracts/api/src/: app.ts  index.ts
finova-contracts/api/src/controllers/: user.controller.ts
finova-contracts/api/src/routes/: user.routes.ts
finova-contracts/programs/finova-core/: Cargo.toml
finova-contracts/programs/finova-core/src/: constants.rs  errors.rs  events.rs  lib.rs  utils.rs
finova-contracts/programs/finova-core/src/instructions/: admin.rs  guild.rs  initialize.rs  mining.rs  referral.rs  staking.rs  user.rs  xp.rs
finova-contracts/programs/finova-core/src/state/: guild.rs  mining.rs  network.rs  staking.rs  user.rs  xp.rs
finova-contracts/programs/finova-nft/: Cargo.toml
finova-contracts/programs/finova-nft/src/: lib.rs
finova-contracts/programs/finova-nft/src/instructions/: collection.rs  mint.rs
(+267 files in other folders)
