[workspace]
resolver = "2"
members = [
    # Core Programs
    "programs/finova-core",
    "programs/finova-token",
    "programs/finova-nft",
    "programs/finova-defi",
    "programs/finova-bridge",
    "programs/finova-oracle",

    # Client SDKs
    "client/rust",

    # Tools
    "tools/code-generation/idl-generator"
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
