[workspace]
resolver = "2"
members = [
    "programs/finova-core",
    "programs/finova-token",
    "programs/finova-nft", 
    "programs/finova-defi",
    "programs/finova-oracle",
    "programs/finova-bridge",
    "client/rust",
    "tools/code-generation/idl-generator",
    "tools/testing/test-data-generator",
    "tools/monitoring/blockchain-monitor"
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Finova Network Team <dev@finova.network>"]
repository = "https://github.com/finova-network/finova-contracts"
homepage = "https://finova.network"
documentation = "https://docs.finova.network"
description = "Finova Network: The Next Generation Social-Fi Super App on Solana"
keywords = ["solana", "blockchain", "defi", "social-fi", "mining"]
categories = ["cryptocurrency", "web-programming", "api-bindings"]
readme = "README.md"

[workspace.dependencies]
# Anchor Framework
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
anchor-syn = "0.28.0"

# Solana Programs
solana-program = "~1.16.0"
solana-sdk = "~1.16.0"
solana-client = "~1.16.0"
solana-account-decoder = "~1.16.0"
solana-transaction-status = "~1.16.0"

# SPL Token Programs
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "0.9", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.2", features = ["no-entrypoint"] }
spl-memo = { version = "4.0", features = ["no-entrypoint"] }

# Metaplex
mpl-token-metadata = "1.13.2"
mpl-token-auth-rules = "1.3.3"
mpl-bubblegum = "0.7.0"

# Cryptography
ed25519-dalek = "1.0.1"
sha2 = "0.10.7"
sha3 = "0.10.8"
blake3 = "1.4.1"
curve25519-dalek = "4.0.0"

# Serialization
borsh = "0.10.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
bincode = "1.3.3"

# Utilities
thiserror = "1.0.47"
anyhow = "1.0.75"
log = "0.4.20"
env_logger = "0.10.0"
clap = { version = "4.4.2", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"

# Math and Calculations
num-traits = "0.2.16"
num-bigint = "0.4.4"
rust_decimal = "1.32.0"
fixed = "1.23.1"

# Time and Date
chrono = { version = "0.4.31", features = ["serde"] }
time = "0.3.28"

# Async and Concurrency
async-trait = "0.1.73"
rayon = "1.7.0"

# Database (for tools and services)
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
redis = { version = "0.23.3", features = ["tokio-comp"] }

# Web and HTTP (for tools and monitoring)
reqwest = { version = "0.11.20", features = ["json", "rustls-tls"] }
axum = "0.6.20"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors", "trace"] }

# Testing
proptest = "1.2.0"
mockall = "0.11.4"
wiremock = "0.5.19"

# Development Tools
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }

[workspace.dependencies.anchor-client]
version = "0.28.0"
features = ["async"]

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
unused_imports = "warn"
dead_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unimplemented = "deny"
todo = "deny"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "packed"
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
strip = "symbols"

[profile.test]
opt-level = 1
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1

# Security profiles for production
[profile.release-secure]
inherits = "release"
opt-level = "z"
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"

# Development profile optimized for faster compilation
[profile.dev-fast]
inherits = "dev"
opt-level = 1
debug = 1
incremental = true
codegen-units = 512

# Profile for CI/CD environments
[profile.ci]
inherits = "test"
opt-level = 2
debug = false
debug-assertions = true
overflow-checks = true

# Patch dependencies for security and compatibility
[patch.crates-io]
# Ensure we use the latest secure versions
# Add patches here as needed for security updates

# Features for different build targets
[features]
default = ["mainnet"]
mainnet = []
testnet = []
devnet = []
localnet = []

# Security features
security-audit = []
formal-verification = []

# Development features
dev-tools = []
testing = []
benchmarking = []

# Integration features
social-platforms = []
payment-gateways = []
ai-services = []

# Performance features
optimized = []
minimal = []
